--- a/palindromeChecker/index.html
+++ b/palindromeChecker/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Palindrome checker</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="app_container">
-    <img class="project-logo"src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="freeCodeCamp Logo">
-    <h1 class="project-heading">Is it a Palindrome?</h1>
-    <div class="checker_container">
-      <label for="word-input" class="checker_text">Enter in text to check for a palindrome:
-      </label>
-      <div class ="input-wraper">
-        <input type="text" class="checker_input" id="text-input">
-        <button class="checker_btn" id="check-btn">Check</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Palindrome checker</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="app_container">
+      <img
+        class="project-logo"
+        src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
+        alt="freeCodeCamp Logo"
+      />
+      <h1 class="project-heading">Is it a Palindrome?</h1>
+      <form class="checker_container" id="checker_form">
+        <label for="word-input" class="checker_text"
+          >Enter in text to check for a palindrome:
+        </label>
+        <div class="input-wraper">
+          <input type="text" class="checker_input" id="text-input" />
+          <button class="checker_btn" id="check-btn" type="submit">
+            Check
+          </button>
+        </div>
+        <div class="checker_result" id="result"></div>
+      </form>
+      <div class="definition_container">
+        <p class="definition_text">
+          <span role="img" aria-label="light-bulb">💡</span> A
+          <i> palindrome </i> is a word or sentence that's spelled the same way
+          both forward and backward, ignoring punctuation, case, and spacing.
+        </p>
       </div>
-      <div class="checker_result" id="check-btn">abba is a palindrome.</div>
     </div>
-    <div class="definition_container">
-      <p class="definition_text"> <span role="img" aria-label="light-bulb">💡</span> A <i> palindrome </i> is a word or sentence that's spelled the same
-        way both forward and backward, ignoring punctuation, case, and
-        spacing.</p>
-    </div>
-  </div>  
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
